<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/bg"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_weight="3"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splat_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_login1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:id="@+id/t1"
            />
        <TextView
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:text="@string/string_login2"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:textStyle="normal"
            android:gravity="center"
            android:id="@+id/t2"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        >
        <com.google.android.material.button.MaterialButton
            android:layout_width="327sp"
            android:layout_height="60sp"
            android:backgroundTint="@color/white"
            android:textColor="@color/textLoginButton"
            android:text="@string/sign_in_with_google"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:icon="@drawable/icon_google"
            app:iconTint="@null"
            android:id="@+id/loginGoogle"
            app:cornerRadius="8sp"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="327sp"
            android:layout_height="60sp"
            android:backgroundTint="@color/white"
            android:textColor="@color/textLoginButton"
            android:text="@string/sign_in_with_facebook"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:icon="@drawable/icon_facebook"
            app:iconTint="@null"
            android:id="@+id/loginFacebook"
            app:cornerRadius="8sp"
            />
    </LinearLayout>

</LinearLayout>