<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_alert_box"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Filter"
            android:textSize="24sp"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5sp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complete_status"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@drawable/background_filter_options"
                    android:paddingRight="9sp"
                    android:paddingLeft="9sp"
                    android:paddingTop="5sp"
                    android:paddingBottom="5sp"
                    android:maxLines="1"
                    android:layout_marginRight="6sp"
                    android:id="@+id/todayTab_filter_complete"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coming_status"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@drawable/background_filter_options"
                    android:paddingRight="9sp"
                    android:paddingLeft="9sp"
                    android:paddingTop="5sp"
                    android:paddingBottom="5sp"
                    android:maxLines="1"
                    android:layout_marginRight="6sp"
                    android:id="@+id/todayTab_filter_coming"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ignore_status"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@drawable/background_filter_options"
                    android:paddingRight="9sp"
                    android:paddingLeft="9sp"
                    android:paddingTop="5sp"
                    android:paddingBottom="5sp"
                    android:maxLines="1"
                    android:layout_marginRight="6sp"
                    android:id="@+id/todayTab_filter_ignore"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/running_status"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@drawable/background_filter_options"
                    android:paddingRight="9sp"
                    android:paddingLeft="9sp"
                    android:paddingTop="5sp"
                    android:paddingBottom="5sp"
                    android:maxLines="1"
                    android:layout_marginRight="6sp"
                    android:id="@+id/todayTab_filter_running"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drop_status"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@drawable/background_filter_options"
                    android:paddingRight="9sp"
                    android:paddingLeft="9sp"
                    android:paddingTop="5sp"
                    android:paddingBottom="5sp"
                    android:maxLines="1"
                    android:layout_marginRight="6sp"
                    android:id="@+id/todayTab_filter_drop"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!--   button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44sp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="Cancel"
            android:gravity="center"
            android:textSize="17sp"
            android:textColor="@color/button_below_alert"
            android:background="@drawable/background_button_below_alert"
            android:id="@+id/todayTab_filter_cancelTextView"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="Confirm"
            android:gravity="center"
            android:textSize="17sp"
            android:textColor="@color/button_below_alert"
            android:background="@drawable/background_button_below_alert"
            android:id="@+id/todayTab_filter_confirmTextView"
            />
    </LinearLayout>

</LinearLayout>